--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+### Java template
+
 # Compiled class file
 *.class
 
@@ -10,9 +12,10 @@
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
-# Package Files #
+# Package Files ###
 *.jar
 *.war
+*.nar
 *.ear
 *.zip
 *.tar.gz
@@ -21,14 +24,30 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-# IntelliJ files
-.idea/
+### Gradle template
+
+.gradle
+/build/
+
+# Ignore Gradle GUI config
+gradle-app.setting
+
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
+
+# Cache of project
+.gradletasknamecache
+
+# # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
+# gradle/wrapper/gradle-wrapper.properties
+
+### Ignore IntelliJ
+.idea
 *.iml
 
 # compiled files
 out/
 
 # mac os metafiles
-.DS_STORE
 
 [![Build Status](https://travis-ci.com/MiraCostaCS-Nery/cs113-hw3-polynomial-arthurutnehmer.svg?token=N5NAyhrpuV9Ag1DXENbj&branch=master)](https://travis-ci.com/MiraCostaCS-Nery/cs113-hw3-polynomial-arthurutnehmer)
